--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@ canvas {
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
   <div class="image-button" onclick="redirectToWebsite5()">
-    <img src="https://i.ibb.co/fGfVnmz/image-2024-04-13-214849000.png" alt="Image 5">
+    <img src="https://i.ibb.co/G7hJSyt/image-2024-04-19-193930482.png" alt="Image 5">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
   <!-- Second column -->
   <div class="image-button" onclick="redirectToWebsite6()">
-    <img src="https://i.ibb.co/q1kK4j4/image-2024-04-13-214849000.png" alt="Image 6">
+    <img src="https://i.ibb.co/vdHNW5r/image-2024-04-19-200742466.png" alt="Image 6">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
   <div class="image-button" onclick="redirectToWebsite7()">
-    <img src="https://i.ibb.co/r4dX787/image-2024-04-13-220520830.png" alt="Image 7">
+    <img src="https://i.ibb.co/hDW7v5q/image-2024-04-19-201028793.png" alt="Image 7">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
   <div class="image-button" onclick="redirectToWebsite8()">
@@ -114,23 +114,23 @@ canvas {
   </div>
   <!-- Third column -->
   <div class="image-button" onclick="redirectToWebsite9()">
-    <img src="https://i.ibb.co/BZsZ2cg/image-2024-04-14-140116584.png" alt="Image 9">
+    <img src="https://i.ibb.co/rbJZrcX/image-2024-04-19-202245297.png" alt="Image 9">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
   <div class="image-button" onclick="redirectToWebsite10()">
-    <img src="https://i.ibb.co/6y9CjJW/image-2024-04-14-141432836.png" alt="Image 10">
+    <img src="https://i.ibb.co/DzJ7tCN/image-2024-04-19-225854730.png" alt="Image 10">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
   <div class="image-button" onclick="redirectToWebsite11()">
-    <img src="https://i.ibb.co/J3S4rbH/image-2024-04-14-142219299.png" alt="Image 11">
+    <img src="https://i.ibb.co/fGfVnmz/image-2024-04-13-214849000.png" alt="Image 11">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
   <div class="image-button" onclick="redirectToWebsite12()">
-    <img src="https://i.ibb.co/0ymgbDL/image-2024-04-14-142939995.png" alt="Image 12">
+    <img src="https://i.ibb.co/znryTr2/image-2024-04-19-231655066.png" alt="Image 12">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
   <div class="image-button" onclick="redirectToWebsite13()">
-    <img src="https://i.ibb.co/fGfVnmz/image-2024-04-13-214849000.png" alt="Image 13">
+    <img src="https://i.ibb.co/hMdGXM1/image-2024-04-19-233039666.png" alt="Image 13">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
 </div>
@@ -258,7 +258,7 @@ function redirectToWebsite2() {
 }
 
 function redirectToWebsite3() {
-  window.open("https://cdn.jsdelivr.net/gh/sk1bx/element@9cccb2fafb569c963501a5d818472b561121cea6/totm.xml&container=ig", "_blank");
+  window.open("https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/element@9cccb2fafb569c963501a5d818472b561121cea6/totm.xml&container=ig", "_blank");
 }
 
 function redirectToWebsite4() {
@@ -286,7 +286,7 @@ function redirectToWebsite9() {
 }
 
 function redirectToWebsite10() {
-  window.open("https://eaglercraft.com/mc/1.8.8/", "_blank");
+  window.open("https://sd592g.github.io/zj684od4lfg/", "_blank");
 }
 
 function redirectToWebsite11() {
@@ -298,7 +298,7 @@ function redirectToWebsite12() {
 }
 
 function redirectToWebsite13() {
-  window.open("https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/version@77d7c057275710c07925ba951e9e56902d101c84/3sp.xml&container=ig", "_blank");
+  window.open("https://www.googlesnake.com/snakedesktop.php", "_blank");
 }
 </script>
 </body>
