--- a/index.html
+++ b/index.html
@@ -6,79 +6,12 @@
 <title>Games</title>
 <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
 <style>
-/* ---- reset ---- */
-body {
-  margin: 0;
-  font: normal 75% Arial, Helvetica, sans-serif;
-}
-canvas {
-  display: block;
-  vertical-align: bottom;
-}
-/* ---- particles.js container ---- */
-#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #100f0f;
-  background-image: url("");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-}
-/* ---- image buttons ---- */
-.image-buttons {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding: 20px;
-}
-
-.image-button {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  border: 5px solid #1B1212;
-  border-radius: 10px;
-  overflow: hidden;
-  transition: all 0.3s ease;
-}
-
-.image-button:hover {
-  transform: scale(1.05);
-}
-
-.image-button img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.play-icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 50px;
-  height: 50px;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.image-button:hover .play-icon {
-  opacity: 1;
-}
+body{margin:0;font:normal 75% Arial,Helvetica,sans-serif}canvas{display:block;vertical-align:bottom}#particles-js{position:absolute;width:100%;height:100%;background-color:#100f0f;background-image:url("");background-repeat:no-repeat;background-size:cover;background-position:50% 50%}.image-buttons{display:flex;flex-wrap:wrap;justify-content:center;align-items:center;gap:10px;padding:20px}.image-button{position:relative;width:200px;height:200px;border:5px solid #1B1212;border-radius:10px;overflow:hidden;transition:all 0.3s ease}.image-button:hover{transform:scale(1.05)}.image-button img{width:100%;height:100%;object-fit:cover}.play-icon{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);width:50px;height:50px;opacity:0;transition:opacity 0.3s ease}.image-button:hover .play-icon{opacity:1}
 </style>
 </head>
 <body>
-<!-- particles.js container -->
 <div id="particles-js"></div>
-
-<!-- image buttons -->
 <div class="image-buttons">
-  <!-- First column -->
   <div class="image-button" onclick="redirectToWebsite1()">
     <img src="https://i.ibb.co/BZsZ2cg/image-2024-04-14-140116584.png" alt="Image 1">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
@@ -99,7 +32,6 @@ canvas {
     <img src="https://i.ibb.co/G7hJSyt/image-2024-04-19-193930482.png" alt="Image 5">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
-  <!-- Second column -->
   <div class="image-button" onclick="redirectToWebsite6()">
     <img src="https://i.ibb.co/vdHNW5r/image-2024-04-19-200742466.png" alt="Image 6">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
@@ -112,7 +44,6 @@ canvas {
     <img src="https://i.ibb.co/5kkSrqv/image-2024-04-15-161356178.png" alt="Image 8">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
-  <!-- Third column -->
   <div class="image-button" onclick="redirectToWebsite9()">
     <img src="https://i.ibb.co/rbJZrcX/image-2024-04-19-202245297.png" alt="Image 9">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
@@ -134,172 +65,22 @@ canvas {
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
 </div>
-
-<!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
-particlesJS("particles-js", {
-  "particles": {
-    "number": {
-      "value": 80,
-      "density": {
-        "enable": true,
-        "value_area": 800
-      }
-    },
-    "color": {
-      "value": "#ffffff"
-    },
-    "shape": {
-      "type": "circle",
-      "stroke": {
-        "width": 0,
-        "color": "#000000"
-      },
-      "polygon": {
-        "nb_sides": 5
-      },
-      "image": {
-        "src": "img/github.svg",
-        "width": 100,
-        "height": 100
-      }
-    },
-    "opacity": {
-      "value": 0.5,
-      "random": false,
-      "anim": {
-        "enable": false,
-        "speed": 1,
-        "opacity_min": 0.1,
-        "sync": false
-      }
-    },
-    "size": {
-      "value": 3,
-      "random": true,
-      "anim": {
-        "enable": false,
-        "speed": 40,
-        "size_min": 0.1,
-        "sync": false
-      }
-    },
-    "line_linked": {
-      "enable": true,
-      "distance": 150,
-      "color": "#ffffff",
-      "opacity": 0.4,
-      "width": 1
-    },
-    "move": {
-      "enable": true,
-      "speed": 6,
-      "direction": "none",
-      "random": false,
-      "straight": false,
-      "out_mode": "out",
-      "bounce": false,
-      "attract": {
-        "enable": false,
-        "rotateX": 600,
-        "rotateY": 1200
-      }
-    }
-  },
-  "interactivity": {
-    "detect_on": "canvas",
-    "events": {
-      "onhover": {
-        "enable": true,
-        "mode": "repulse"
-      },
-      "onclick": {
-        "enable": true,
-        "mode": "push"
-      },
-      "resize": true
-    },
-    "modes": {
-      "grab": {
-        "distance": 400,
-        "line_linked": {
-          "opacity": 1
-        }
-      },
-      "bubble": {
-        "distance": 400,
-        "size": 40,
-        "duration": 2,
-        "opacity": 8,
-        "speed": 3
-      },
-      "repulse": {
-        "distance": 200,
-        "duration": 0.4
-      },
-      "push": {
-        "particles_nb": 4
-      },
-      "remove": {
-        "particles_nb": 2
-      }
-    }
-  },
-  "retina_detect": true
-});
-
-function redirectToWebsite1() {
-  window.open("https://educationbluesky.com/apps/roblox-corporation/5349/roblox.html", "_blank");
-}
-
-function redirectToWebsite2() {
-  window.open("https://scratch.mit.edu/projects/105500895/embed", "_blank");
-}
-
-function redirectToWebsite3() {
-  window.open("https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/element@9cccb2fafb569c963501a5d818472b561121cea6/totm.xml&container=ig", "_blank");
-}
-
-function redirectToWebsite4() {
-  window.open("https://orteil.dashnet.org/cookieclicker/", "_blank");
-}
-
-function redirectToWebsite5() {
-  window.open("https://basketbros.io", "_blank");
-}
-
-function redirectToWebsite6() {
-  window.open("https://book-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/mind4ur/debugactions@955cea1ae2437efeb70d98eb7b5bc05d1e64d5da/old/old.xml&container=ig", "_blank");
-}
-
-function redirectToWebsite7() {
-  window.open("https://lekug.github.io/tn6pS9dCf37xAhkJv/", "_blank");
-}
-
-function redirectToWebsite8() {
-  window.open("https://storage.y8.com/y8-studio/html5/annu/moto1/?key=2365427&value=87599", "_blank");
-}
-
-function redirectToWebsite9() {
-  window.open("https://lolbeans.io", "_blank");
-}
-
-function redirectToWebsite10() {
-  window.open("https://sd592g.github.io/zj684od4lfg/", "_blank");
-}
-
-function redirectToWebsite11() {
-  window.open("https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://s3.amazonaws.com/production-assetsbucket-8ljvyr1xczmb/1ee20621-61bc-4ec8-a8ec-5e839c2e6edc%2Ffive-nights-at-freddy-s.xml&container=ig", "_blank");
-}
-
-function redirectToWebsite12() {
-  window.open("https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/version@77d7c057275710c07925ba951e9e56902d101c84/3sp.xml&container=ig", "_blank");
-}
-
-function redirectToWebsite13() {
-  window.open("https://www.googlesnake.com/snakedesktop.php", "_blank");
-}
+particlesJS("particles-js",{"particles":{"number":{"value":80,"density":{"enable":true,"value_area":800}},"color":{"value":"#ffffff"},"shape":{"type":"circle","stroke":{"width":0,"color":"#000000"},"polygon":{"nb_sides":5},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.5,"random":false,"anim":{"enable":false,"speed":1,"opacity_min":0.1,"sync":false}},"size":{"value":3,"random":true,"anim":{"enable":false,"speed":40,"size_min":0.1,"sync":false}},"line_linked":{"enable":true,"distance":150,"color":"#ffffff","opacity":0.4,"width":1},"move":{"enable":true,"speed":6,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":true,"mode":"repulse"},"onclick":{"enable":true,"mode":"push"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":3},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});
+function redirectToWebsite1(){window.open("https://educationbluesky.com/apps/roblox-corporation/5349/roblox.html","_blank")}
+function redirectToWebsite2(){window.open("https://scratch.mit.edu/projects/105500895/embed","_blank")}
+function redirectToWebsite3(){window.open("https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/element@9cccb2fafb569c963501a5d818472b561121cea6/totm.xml&container=ig","_blank")}
+function redirectToWebsite4(){window.open("https://orteil.dashnet.org/cookieclicker/","_blank")}
+function redirectToWebsite5(){window.open("https://basketbros.io","_blank")}
+function redirectToWebsite6(){window.open("https://book-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/mind4ur/debugactions@955cea1ae2437efeb70d98eb7b5bc05d1e64d5da/old/old.xml&container=ig","_blank")}
+function redirectToWebsite7(){window.open("https://lekug.github.io/tn6pS9dCf37xAhkJv/","_blank")}
+function redirectToWebsite8(){window.open("https://storage.y8.com/y8-studio/html5/annu/moto1/?key=2365427&value=87599","_blank")}
+function redirectToWebsite9(){window.open("https://lolbeans.io","_blank")}
+function redirectToWebsite10(){window.open("https://sd592g.github.io/zj684od4lfg/","_blank")}
+function redirectToWebsite11(){window.open("https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://s3.amazonaws.com/production-assetsbucket-8ljvyr1xczmb/1ee20621-61bc-4ec8-a8ec-5e839c2e6edc%2Ffive-nights-at-freddy-s.xml&container=ig","_blank")}
+function redirectToWebsite12(){window.open("https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/version@77d7c057275710c07925ba951e9e56902d101c84/3sp.xml&container=ig","_blank")}
+function redirectToWebsite13(){window.open("https://www.googlesnake.com/snakedesktop.php","_blank")}
 </script>
 </body>
 </html>
