--- a/index.html
+++ b/index.html
@@ -64,6 +64,35 @@ body{margin:0;font:normal 75% Arial,Helvetica,sans-serif}canvas{display:block;ve
     <img src="https://i.ibb.co/hMdGXM1/image-2024-04-19-233039666.png" alt="Image 13">
     <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
   </div>
+  <div class="image-button" onclick="redirectToWebsite14()">
+    <img src="https://i.ibb.co/qkBdzjD/image-2024-04-20-091653536.png" alt="Rocket League">
+    <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
+  </div>
+  <div class="image-button" onclick="redirectToWebsite15()">
+    <img src="https://i.ibb.co/grbHCBf/image-2024-04-20-092018628.png" alt="Paper.io 2">
+    <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
+  </div>
+  <div class="image-button" onclick="redirectToWebsite16()">
+    <img src="https://i.ibb.co/C1mxzRS/image-2024-04-20-093024070.png" alt="Call of Ops">
+    <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
+  </div>
+ <div class="image-button" onclick="redirectToWebsite17()">
+    <img src="https://i.ibb.co/G7LVLCP/image-2024-04-20-093527435.png" alt="Drift Hunters">
+    <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
+  </div>
+<div class="image-button" onclick="redirectToWebsite18()">
+    <img src="https://i.ibb.co/6nHPMLQ/image-2024-04-20-094611186.png" alt="Happy Wheels">
+    <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
+  </div>
+<div class="image-button" onclick="redirectToWebsite19()">
+    <img src="https://i.ibb.co/FbZJQbL/image-2024-04-20-095007067.png" alt="Drift Boss">
+    <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
+  </div>
+</div>
+<div class="image-button" onclick="redirectToWebsite20()">
+    <img src="https://i.ibb.co/VMYKz6z/image-2024-04-20-100100706.png" alt="Pac-Man">
+    <img class="play-icon" src="https://i.ibb.co/XVDpV5N/image-2024-04-13-205255829.png" alt="Play Icon">
+  </div>
 </div>
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
@@ -81,6 +110,13 @@ function redirectToWebsite10(){window.open("https://sd592g.github.io/zj684od4lfg
 function redirectToWebsite11(){window.open("https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://s3.amazonaws.com/production-assetsbucket-8ljvyr1xczmb/1ee20621-61bc-4ec8-a8ec-5e839c2e6edc%2Ffive-nights-at-freddy-s.xml&container=ig","_blank")}
 function redirectToWebsite12(){window.open("https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/version@77d7c057275710c07925ba951e9e56902d101c84/3sp.xml&container=ig","_blank")}
 function redirectToWebsite13(){window.open("https://www.googlesnake.com/snakedesktop.php","_blank")}
+function redirectToWebsite14(){window.open("https://ubg77.github.io/edit/rocket-soccer-derby/","_blank")}
+function redirectToWebsite15(){window.open("https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/234sd4w5w45wers5tr-645758574456456/435345345346@main/d8g3s-53253463456pp.xml&container=ig","_blank")}
+function redirectToWebsite16(){window.open("https://zayaruzostreetorgan.com/uploads/5/5/6/7/5567194/custom_themes/666344820848380631/call_of_ops_2.html","_blank")}
+function redirectToWebsite17(){window.open("https://player.work/drift-hunters/","_blank")}
+function redirectToWebsite18(){window.open("https://games-online.io/game/HappyWheels/","_blank")}
+function redirectToWebsite19(){window.open("https://ubg98.github.io/DriftBoss/","_blank")}
+function redirectToWebsite20(){window.open("https://www.google.com/logos/2010/pacman10-i.html","_blank")}
 </script>
 </body>
 </html>
