--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@ cursor: pointer;
 <div class="button-container">
 <a href="https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/version@77d7c057275710c07925ba951e9e56902d101c84/3sp.xml&container=ig">
 <button class="image-button">
-<img src="https://i.ibb.co/znryTr2/image-2024-04-19-231655066.png" alt="Image Button">
+<img src="https://i.imgur.com/35vc1zT.jpg" alt="Image Button">
 <span class="game-title">Slope</span>
 </button>
 </a>
 <a href="https://orteil.dashnet.org/cookieclicker/" target="_blank">
 <button class="image-button">
-<img src="https://i.ibb.co/0ymgbDL/image-2024-04-14-142939995.png" alt="Image Button">
+<img src="https://i.imgur.com/wFHkSwd.jpeg" alt="Image Button">
 <span class="game-title">Cookie Clicker</span>
 </button>
 </a>
